# calibcamodo

./: CMakeLists.txt  package.xml
config/: CalibConfig.yml  CalibConfig.yml~  CamConfig.yml  Mk.rec  Odo.rec
src/: calib_aruco.cpp  calib_aruco_online.cpp  calib_orb.cpp  detect_aruco.cpp
src/aruco/: arucofidmarkers.cpp  markerdetector.cpp
src/core/: config.cpp  config.h  dataset.cpp  dataset.h  frame.cpp  frame.h  maker_aruco.cpp  maker_aruco.h  maker_base.cpp  maker_orb.cpp  maker_orb.h  mapmark.h  mappoint.cpp  mappoint.h  math_cv.cpp  measurepool.cpp  solver_initmk.cpp  solver_initmk.h  solver_optmk.cpp  solver_vsclam.cpp  solver_vsclam.h  type.cpp
src/g2o/: edge_calibcamodo.cpp  edge_calibcamodo.h  g2o_api.cpp  g2o_api.h
src/orb/: ORBextractor.cpp
src/ros/: mappublish.cpp
src/slide_opt/: slide_optimation.cpp  slide_optimation.h
